--- a/styles/style.css
+++ b/styles/style.css
@@ -99,3 +99,11 @@ body {
 margin: 20px 0;
 }
 
+.viewProdsButton {
+    border: 1px solid #d4a085;
+}
+
+.viewProdsButton:hover {
+    background-color: #d4a085 !important;
+    color: #ffece1;
+}
